--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ main: com.thevoxelbox.voxelsniper.VoxelSniper
 version: ${project.build.version}
 api-version: "1.13"
 website: ${project.url}
-authors: [przerwap, MikeMatrix, Gavjenks, giltwist, psanker, Deamon5550, DivineRage]
+authors: [przerwap, MikeMatrix, Gavjenks, giltwist, psanker, Deamon5550, DivineRage, Jannyboy11]
 description: ${project.description}
 softdepend: [VoxelModPackPlugin]
 commands:
