--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -148,6 +148,7 @@ permissions:
       voxelsniper.brush.entityremoval: true
       voxelsniper.brush.eraser: true
       voxelsniper.brush.erode: true
+      voxelsniper.brush.erodeblend: true
       voxelsniper.brush.extrude: true
       voxelsniper.brush.filldown: true
       voxelsniper.brush.flatocean: true
@@ -198,6 +199,7 @@ permissions:
       voxelsniper.brush.voxel: true
       voxelsniper.brush.voxeldisc: true
       voxelsniper.brush.voxeldiscface: true
+      voxelsniper.brush.wallsider: true
       voxelsniper.brush.warp: true
   voxelsniper.brush.ball:
     default: op
@@ -252,6 +254,8 @@ permissions:
   voxelsniper.brush.eraser:
     default: op
   voxelsniper.brush.erode:
+    default: op
+  voxelsniper.brush.erodeblend:
     default: op
   voxelsniper.brush.extrude:
     default: op
@@ -352,6 +356,8 @@ permissions:
   voxelsniper.brush.voxeldisc:
     default: op
   voxelsniper.brush.voxeldiscface:
+    default: op
+  voxelsniper.brush.wallsider:
     default: op
   voxelsniper.brush.warp:
     default: op
